--- a/reactome_interactions/reactome_vs_imex_lean.html
+++ b/reactome_interactions/reactome_vs_imex_lean.html
@@ -191,6 +191,7 @@ hljs.initHighlightingOnLoad();
 
 <pre><code class="r">system(&quot;perl ./scripts/reactome_prot_cleaner.pl ./source_files/rr.proteins.txt ./processed_files/rr.proteins.clean.txt&quot;)
 rr_prots &lt;- read.delim(&quot;./processed_files/rr.proteins.clean.txt&quot;, header = F, sep = &quot;\t&quot;, colClasses = &quot;character&quot;)
+system(&quot;rm ./processed_files/rr.proteins.clean.txt&quot;)
 colnames(rr_prots) &lt;- c(&quot;upac&quot;,&quot;upac_clean&quot;,&quot;rr_id&quot;, &quot;type&quot;)
 library(dplyr)
 
@@ -264,8 +265,6 @@ rr_pairs &lt;- unique(rbind(rr_pairs_1, rr_pair_outcat))
 <pre><code class="r">rr_pairs_pmid_all &lt;- unique(merge(rr_pairs, rr_pmids_human, by=&quot;rr_id&quot;,all=F))
 </code></pre>
 
-<p>Finally I end up with a list of 11972485 valid associations extracted from Reactome in human. </p>
-
 <h3>Part 4: Final formatting steps for generation of the Reactome dataset</h3>
 
 <p>I generate a unique pair identifier per line and save the Reactome pairs associated with the PMIDs as a text file for further comparison with other datasets.</p>
@@ -278,7 +277,10 @@ rr_pairs_pmid_all$pair_id &lt;- apply(rr_pairs_pmid_all[,2:3], 1,function(i){
 reactome_pairs_pmid &lt;- unique(select(rr_pairs_pmid_all, pair_id, pmid))
 reactome_pairs_pmid$reactome &lt;- 1
 write.table(reactome_pairs_pmid,&quot;./results/pairs_pmid_reactome.txt&quot;,col.names=T,row.names=F,quote=F,sep=&quot;\t&quot;)
+system(&quot;gzip ./results/pairs_pmid_reactome.txt&quot;)
 </code></pre>
+
+<p>After collapsing redundant pairs, I end up with a list of 5180082 unique protein pair-publication associations extracted from Reactome in human. </p>
 
 </body>
 
